# aurora-client

./: Cargo.toml  Config.toml.example  README.md  build_android.sh
jni-lib/: Cargo.toml  build.rs  jni_header.h
jni-lib/src/java/uk/me/rochester/: Aurora.java
jni-lib/src/rust/: lib.rs
lib/: Cargo.toml
lib/src/: errors.rs  lib.rs
src/: errors.rs  main.rs  ratelimitedstream.rs
