[package]
name = "aurora-client-jni"
version = "0.1.0"
authors = ["Euan Rochester <euan@rochester.me.uk>"]
license = "MIT/Apache-2.0"
keywords = ["aurora","pv","solar","inverter"]
repository = "https://github.com/Eroc33/aurora-client"

[lib]
path = "src/rust/lib.rs"
crate-type = ["cdylib"]

[dependencies.aurora-client]
path = "../lib"

[dependencies]
jni = "0.5.0"

[build-dependencies]
kohi = {git="https://github.com/Eroc33/kohi.git"}
