[package]
name = "aurora-client"
version = "0.1.0"
authors = ["Euan Rochester <euan@rochester.me.uk>"]
license = "MIT/Apache-2.0"
keywords = ["aurora","pv","solar","inverter"]
repository = "https://github.com/Eroc33/aurora-client"

[dependencies]
futures = "0.1.0"
tokio-core = "0.1.3"
tokio-proto = "0.1.0"
tokio-service = "0.1.0"
tokio-timer = "0.1.0"
serde = "1.0.7"
serde_derive = "1.0.7"
mime = "0.3.2"
sun-times = "0.1.2"
error-chain = "0.10.0"
hyper = "0.11.1"

[dependencies.aurora-rs]
git = "https://github.com/Eroc33/aurora"

[dependencies.toml]
version = "0.4.1"
default-features = false
features = ["serde"]


[dependencies.chrono]
version = "0.4.0"
features = ["serde"]
